2010-09-12  Robin Qiu  <robin.qiu@torchmobile.com.cn>

Reviewed by Antonio Gomes.

        https://bugs.webkit.org/show_bug.cgi?id=18768
        Fixed a bug in scroll flow. When we don't have scrollbars, we need to
        repaintFixedElementsAfterScrolling(), sendScrollEvent() ... as well as
        scrollContents();

        * scrollbars/resources/scrollable-iframe.html: Added.
        * scrollbars/scrollevent-iframe-no-scrolling-expected.txt: Added.
        * scrollbars/scrollevent-iframe-no-scrolling-wheel-expected.txt: Added.
        * scrollbars/scrollevent-iframe-no-scrolling-wheel.html: Added.
        * scrollbars/scrollevent-iframe-no-scrolling.html: Added.
2010-09-12  Robin Qiu  <robin.qiu@torchmobile.com.cn>

        Reviewed by Antonio Gomes.

        https://bugs.webkit.org/show_bug.cgi?id=18768
        Fixed a bug in scroll flow. When we don't have scrollbars, we need to
        repaintFixedElementsAfterScrolling(), sendScrollEvent() ... as well as
        scrollContents();

        Tests: scrollbars/scrollevent-iframe-no-scrolling-wheel.html
               scrollbars/scrollevent-iframe-no-scrolling.html

        * page/FrameView.cpp:
        (WebCore::FrameView::valueChanged): Added.
        * page/FrameView.h: Added a new method.
        * platform/ScrollView.cpp:
        (WebCore::ScrollView::valueChanged): Added.
        (WebCore::ScrollView::updateScrollbars):
        * platform/ScrollView.h: Added a new method.

Canonical link: https://commits.webkit.org/58097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67365 268f45cc-cd09-0410-ab3c-d52691b4dbfc